--- a/static/index.html
+++ b/static/index.html
@@ -130,6 +130,8 @@
             border: 1px solid var(--border-color);
             box-shadow: 0 2px 10px var(--shadow-color);
             transition: background-color 0.3s ease, border-color 0.3s ease;
+            z-index: 1001;
+            overflow-y: auto;
         }
         #browse-panel.active {
             display: block;
@@ -233,6 +235,10 @@
         .toggle-browse:hover {
             background-color: var(--bg-secondary);
         }
+        /* Hide toggle button when panel is open */
+        body:has(#browse-panel.active) .toggle-browse {
+            display: none;
+        }
         #info-panel h3 {
             margin-top: 0;
             color: var(--text-accent);
@@ -268,7 +274,10 @@
     </div>
     <button class="toggle-browse" onclick="toggleBrowsePanel()">📋 Browse Nodes</button>
     <div id="browse-panel">
-        <h3>Browse Captured Data</h3>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+            <h3 style="margin: 0;">Browse Captured Data</h3>
+            <button onclick="toggleBrowsePanel()" style="background: none; border: none; color: var(--text-accent); font-size: 20px; cursor: pointer; padding: 0; width: 24px; height: 24px; line-height: 1; transition: color 0.3s ease;" title="Close">×</button>
+        </div>
         <input type="text" id="search-input" class="search-box" placeholder="Search nodes..." oninput="searchNodes()">
         <div class="filter-buttons">
             <button class="filter-btn active" onclick="filterNodes('', event)">All</button>
@@ -880,9 +889,19 @@
         
         function toggleBrowsePanel() {
             const panel = document.getElementById('browse-panel');
+            const toggleButton = document.querySelector('.toggle-browse');
             panel.classList.toggle('active');
             if (panel.classList.contains('active')) {
                 loadBrowseNodes();
+                // Hide toggle button when panel is open
+                if (toggleButton) {
+                    toggleButton.style.display = 'none';
+                }
+            } else {
+                // Show toggle button when panel is closed
+                if (toggleButton) {
+                    toggleButton.style.display = 'block';
+                }
             }
         }
         
